fix font size on mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -111,6 +111,8 @@ h2 a {
 
 #filter-btn {
   display: none;
+  border: none;
+  background: none;
 }
 
 .input-text-group {
@@ -245,6 +247,8 @@ h2 a {
   background-color: #c7cdcf;
   border-radius: 6px;
   width: 4vw;
+  min-width: 60px;
+  min-height: 60px;
   height: 4vw;
 }
 
