--- a/src/css/responsive.scss
+++ b/src/css/responsive.scss
@@ -29,20 +29,14 @@
   }
 
   .map-container {
-    // opacity: 0.99;
     margin-top: 80px;
     z-index: 1;
     position: fixed;
     width: 100%;
   }
 
-  .sidebar {
-    // pointer-events: none;
-    width: 100%;
-    z-index: 2;
-  }
-
   #filter-btn {
+    border: none;
     display: block;
     position: absolute;
     right: 20px;
@@ -58,6 +52,22 @@
     margin-top: 0;
     position: static;
     z-index: 3;
+  }
+
+  .result-title {
+    font-size: 1.3em;
+  }
+
+  .result-subtitle {
+    font-size: 0.9em;
+  }
+
+  .result-details {
+    font-size: 1.0em;
+  }
+
+  .rating {
+    font-size: 1.1em;
   }
 
   .filters {
